--- a/templates/index.html
+++ b/templates/index.html
@@ -12,10 +12,10 @@
     <title>Becho</title>
 
     <!-- Bootstrap Core CSS -->
-    <link type="text/css" href="static/bootstrap.min.css" rel="stylesheet">
+    <link type="text/css" href="static/img/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link type="text/css" href="static/landing-page.css" rel="stylesheet">
+    <link type="text/css" href="static/img/landing-page.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
     <link type="text/css" href="static/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
@@ -104,7 +104,7 @@
                     <p class="lead">A special thanks to <a target="_blank" href="http://join.deathtothestockphoto.com/">Death to the Stock Photo</a> for providing the photographs that you see in this template. Visit their website to become a member.</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive" src="img/ipad.png" alt="">
+                    <img class="img-responsive" src="static/img/ipad.png" alt="">
                 </div>
             </div>
 
@@ -126,7 +126,7 @@
                     <p class="lead">Turn your 2D designs into high quality, 3D product shots in seconds using free Photoshop actions by <a target="_blank" href="http://www.psdcovers.com/">PSDCovers</a>! Visit their website to download some of their awesome, free photoshop actions!</p>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
-                    <img class="img-responsive" src="img/dog.png" alt="">
+                    <img class="img-responsive" src="static/img/dog.png" alt="">
                 </div>
             </div>
 
@@ -148,7 +148,7 @@
                     <p class="lead">This template features the 'Lato' font, part of the <a target="_blank" href="http://www.google.com/fonts">Google Web Font library</a>, as well as <a target="_blank" href="http://fontawesome.io">icons from Font Awesome</a>.</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive" src="img/phones.png" alt="">
+                    <img class="img-responsive" src="static/img/phones.png" alt="">
                 </div>
             </div>
 
