woops /css not /img/

--- a/templates/index.html
+++ b/templates/index.html
@@ -12,10 +12,10 @@
     <title>Becho</title>
 
     <!-- Bootstrap Core CSS -->
-    <link type="text/css" href="static/img/bootstrap.min.css" rel="stylesheet">
+    <link type="text/css" href="static/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link type="text/css" href="static/img/landing-page.css" rel="stylesheet">
+    <link type="text/css" href="static/css/landing-page.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
     <link type="text/css" href="static/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
