--- a/templates/index.html
+++ b/templates/index.html
@@ -73,7 +73,7 @@
                 <div class="col-lg-12">
                     <div class="intro-message">
                         <h1>Becho</h1>
-                        <h3>Summary of company</h3>
+                        <h3>A Behavioural Economics Based Financial Prediction Report </br> for Companies and Investment Bankers</h3>
                         <hr class="intro-divider">
                         <form style="width:600px; margin:auto" action="report.html" method="get">
                           <div class="form-group">
@@ -100,11 +100,11 @@
                 <div class="col-lg-5 col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <h2 class="section-heading">Predict Stock Prices</h2>
-                    <p class="lead">Applies the power of Microsoft's Azure Machine Learning Platform to conduct real-time public sentiment analysis of the public towards companies, enterprises and associations. Quickly determine consumer reaction to product and feature anouncements.</p>
+                    <h2 class="section-heading">What We Do</h2>
+                    <p class="lead">Applies the power of Microsoft's Azure Machine Learning Platform to conduct Text Analytics to assess sentiment of the public towards specific companies, enterprises and associations.</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive" src="static/img/ipad.png" alt="">
+                    <img class="img-responsive" src="static/img/azure-machine-learning.png" alt="">
                 </div>
             </div>
         </div>
@@ -121,8 +121,8 @@
                 <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <h2 class="section-heading">Seize Abitrage Opportunities</h2>
-                    <p class="lead"></p>
+                    <h2 class="section-heading">Seize Arbitrage Opportunities</h2>
+                    <p class="lead">Predict currency exchange rates, treasury yield rate fluxuations and stock prices to capitilize on price fluxuations and noise.</p>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
                     <img class="img-responsive" src="static/img/dog.png" alt="">
@@ -136,18 +136,16 @@
     <!-- /.content-section-b -->
 
     <div class="content-section-a">
-
         <div class="container">
-
             <div class="row">
                 <div class="col-lg-5 col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <h2 class="section-heading">Google Web Fonts and<br>Font Awesome Icons</h2>
-                    <p class="lead">This template features the 'Lato' font, part of the <a target="_blank" href="http://www.google.com/fonts">Google Web Font library</a>, as well as <a target="_blank" href="http://fontawesome.io">icons from Font Awesome</a>.</p>
+                    <h2 class="section-heading">Global Analytics</h2>
+                    <p class="lead">Geographically contextify public sentiment. If your a company, seize market opportunities in already favourable locations while directing your team's focus and resources where they are needed most.</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive" src="static/img/phones.png" alt="">
+                    <img class="img-responsive" src="static/img/globalization.jpg" alt="">
                 </div>
             </div>
 
