moved around some d3 files

--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
 
     <!-- Custom Fonts -->
     <link type="text/css" href="static/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href="http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
+    <link href='https://fonts.googleapis.com/css?Roboto' rel='stylesheet' type='text/css'>
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -104,7 +104,7 @@
                     <p class="lead">Applies the power of Microsoft's Azure Machine Learning Platform to conduct Text Analytics to assess sentiment of the public towards specific companies, enterprises and associations.</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive" src="static/img/azure-machine-learning.png" alt="">
+                    <img class="img-responsive" src="static/img/azure-machine-learning.png" style="border-radius:25px;" alt="">
                 </div>
             </div>
         </div>
@@ -145,7 +145,7 @@
                     <p class="lead">Geographically contextify public sentiment. If your a company, seize market opportunities in already favourable locations while directing your team's focus and resources where they are needed most.</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive" src="static/img/globalization.jpg" alt="">
+                    <img class="img-responsive" src="static/img/globalization.jpg" style="border-radius:25px;" alt="">
                 </div>
             </div>
 
