--- a/templates/report.html
+++ b/templates/report.html
@@ -8,10 +8,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <script src="../d3.min.js"></script>
+    <script type="text/javascript" src="static/js/d3.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/topojson/1.6.19/topojson.min.js"></script>
 
-    <script src="../datamaps.world.min.js"></script>
+    <script src="static/js/datamaps.world.min.js"></script>
 
     <title>Landing Page - Start Bootstrap Theme</title>
 
