--- a/templates/report.html
+++ b/templates/report.html
@@ -128,6 +128,8 @@
     <script src="../static/js/bootstrap.min.js"></script>
 
     <script type="text/javascript">
+        var quandleAPIKey = 'feJ8YG6ou5am4bEoVp5Z';
+        
         var colors = d3.scale.ordinal()
                       .range(['#99E699', '#5CD65C', '#2EB82E', '#1F7A1F', '#145214']);
         var map = new Datamap({
