--- a/templates/index.html
+++ b/templates/index.html
@@ -33,7 +33,8 @@
 <body>
 
     <!-- Navigation -->
-    <nav class="navbar navbar-default navbar-fixed-top topnav" role="navigation">
+    <nav class="navbar navbar-default navbar-fixed-top topnav" role="navigation" style="background-color: rgba(0, 0, 0, 0.9); 
+            "> 
         <div class="container topnav">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
@@ -43,11 +44,11 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand topnav" href="#">Becho</a>
+                <a class="navbar-brand topnav" style="color:white; font-size: 30px" href="#">Becho</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav navbar-right">
+                <ul id"navbar-text" class="nav navbar-nav navbar-right">
                     <li>
                         <a href="#about">About</a>
                     </li>
@@ -65,7 +66,7 @@
     </nav>
 
     <!-- Header -->
-    <a name="about"></a>
+    <a name="header"></a>
     <div class="intro-header">
         <div class="container">
 
@@ -92,8 +93,8 @@
 
     <!-- Page Content -->
 
-	<a  name="services"></a>
-    <div class="content-section-a">
+	<a  name="about"></a>
+    <div class="content-section-a" style="box-shadow:0 4px 10px -2px gray;">
 
         <div class="container">
             <div class="row">
@@ -112,7 +113,6 @@
 
     </div>
     <!-- /.content-section-a -->
-
     <div class="content-section-b">
 
         <div class="container">
@@ -125,7 +125,7 @@
                     <p class="lead">Predict currency exchange rates, treasury yield rate fluxuations and stock prices to capitilize on price fluxuations and noise.</p>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
-                    <img class="img-responsive" src="static/img/dog.png" alt="">
+                    <img class="img-responsive" src="static/img/stock-graph.png" alt="">
                 </div>
             </div>
 
@@ -134,15 +134,15 @@
 
     </div>
     <!-- /.content-section-b -->
-
-    <div class="content-section-a">
+    <a name="services"></a>
+    <div class="content-section-a" style="box-shadow: 0 -5px 8px -6px #333">
         <div class="container">
             <div class="row">
                 <div class="col-lg-5 col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                     <h2 class="section-heading">Global Analytics</h2>
-                    <p class="lead">Geographically contextify public sentiment. If your a company, seize market opportunities in already favourable locations while directing your team's focus and resources where they are needed most.</p>
+                    <p class="lead">Geographically contextify public sentiment. If you're a company, seize market opportunities in already favourable locations while directing your team's focus and resources where they are needed most.</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
                     <img class="img-responsive" src="static/img/globalization.jpg" style="border-radius:25px;" alt="">
@@ -177,7 +177,7 @@
                             <a href="#contact">Contact</a>
                         </li>
                     </ul>
-                    <p class="copyright text-muted small">Copyright &copy; Your Company 2014. All Rights Reserved</p>
+                    <p class="copyright text-muted small">Copyright &copy; Becho Inc. 2015. All Rights Reserved</p>
                 </div>
             </div>
         </div>
