--- a/templates/report.html
+++ b/templates/report.html
@@ -10,6 +10,7 @@
     <meta name="author" content="">
     <script type="text/javascript" src="static/js/d3.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/topojson/1.6.19/topojson.min.js"></script>
+    <script src="../static/js/d3.layout.cloud.js"></script>
 
     <script src="static/js/datamaps.world.min.js"></script>
 
@@ -70,10 +71,36 @@
                 <div id="map" class="col-lg-5 col-lg-offset-1 col-sm-6">
                     
                 </div>
+    
             </div>
 
         </div>
         <!-- /.container -->
+         <div class="container">
+            <div class="row">
+                <div id="cloud" class="col-lg-5 col-sm-6"></div>
+                <div class="col-lg-5 col-lg-offset-1 col-sm-6">
+                    <div class="clearfix"></div>
+                    <h2 class="section-heading">Trending Topics</h2>
+                    <p class="lead">
+                    </p>
+                </div>
+            </div>
+        </div>
+
+        <!-- /.container -->
+         <div class="container">
+            <div class="row">
+                <div class="col-lg-5 col-lg-offset-1 col-sm-6">
+                    <div class="clearfix"></div>
+                    <h2 class="section-heading">Sentiment Score</h2>
+                    <p class="lead"></p>
+                </div>
+                <div id="cloud" class="col-lg-5 col-sm-6"></div>
+            </div>
+
+        </div>
+
 
     </div>
     <!-- /.content-section-a -->
@@ -137,6 +164,47 @@
         SSD: colors(Math.random() * 30)
       });
 
+
+    function getWords(word){
+        var url="http://159.203.133.16/wordcloud/"+word;
+        $.get(url,function(d){
+            wordCloud(d);
+        });
+    }
+
+    var WIDTH=300;
+    var HEIGHT=300;
+
+    function wordCloud(data){
+        d3.layout.cloud().size([WIDTH,HEIGHT])
+          .words(data.map(function(d){return {text: d[0], size: d[1]}}))
+          .rotate(function(){return ~~(Math.random()*2)* 90})
+          .font("Impact")
+          .fontSize(function(d){return d.size})
+          .on("end",draw)
+          .start();
+    }
+
+    function draw(words) {
+        var color = d3.scale.category10();
+        d3.select("#cloud").append("svg")
+          .attr("width", WIDTH)
+          .attr("height", HEIGHT)
+          .append("g")
+          .attr("transform", "translate("+(WIDTH/2)+","+(HEIGHT/2)+")")
+          .selectAll("text")
+          .data(words)
+          .enter().append("text")
+          .style("font-size", function(d){return d.size + "px"})
+          .style("font-family", "Impact")
+          .style("fill", function(d, i){return color(i)})
+          .attr("text-anchor", "middle")
+          .attr("transform", function(d){
+            return "translate(" + [d.x, d.y] + ")rotate(" + d.rotate + ")"
+        })
+          .text(function(d) { return d.text; });
+    }
+    getWords("Microsoft");
     </script>
 
 </body>
