--- a/templates/report.html
+++ b/templates/report.html
@@ -241,8 +241,25 @@
         })
           .text(function(d) { return d.text; });
     }
-    getWords("Microsoft");
-    $.get('http://159.203.133.16/sentiment/microsoft', function(data){
+
+    var getUrlParameter = function getUrlParameter(sParam) {
+        var sPageURL = decodeURIComponent(window.location.search.substring(1)),
+            sURLVariables = sPageURL.split('&'),
+            sParameterName,
+            i;
+
+        for (i = 0; i < sURLVariables.length; i++) {
+            sParameterName = sURLVariables[i].split('=');
+
+            if (sParameterName[0] === sParam) {
+                return sParameterName[1] === undefined ? true : sParameterName[1];
+            }
+        }
+    };
+    var mtopic = getUrlParameter('topic');
+
+    getWords(mtopic);
+    $.get('http://159.203.133.16/sentiment/'+mtopic, function(data){
         for(var i=0;i<data.length;i++){
             average+=data[i];
             if(data[i]>0&&data[i]<1){
